# ChangeLog for dev-lisp/clisp
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clisp/ChangeLog,v 1.77 2008/05/13 11:36:55 hkbst Exp $

  13 May 2008; Marijn Schouten <hkBst@gentoo.org> -clisp-2.38.ebuild,
  -clisp-2.38-r1.ebuild, -clisp-2.38-r2.ebuild, -clisp-2.39.ebuild,
  -clisp-2.41.ebuild, -clisp-2.42.ebuild, -clisp-2.42-r1.ebuild,
  -clisp-2.43.ebuild:
  drop old versions

*clisp-2.44.1 (13 May 2008)

  13 May 2008; Marijn Schouten <hkBst@gentoo.org> +clisp-2.44.1.ebuild:
  bump, bug 218739 and fix bug 155402, thanks to Stelian Ionescu
  <stelian.ionescu-zeus@poste.it>

  04 May 2008; nixnut <nixnut@gentoo.org> clisp-2.43-r1.ebuild:
  Stable on ppc wrt bug 217700

  20 Apr 2008; Markus Meier <maekke@gentoo.org> clisp-2.43-r1.ebuild:
  amd64/x86 stable, bug #217700

  01 Mar 2008; nixnut <nixnut@gentoo.org> clisp-2.43-r1.ebuild:
  Added ~ppc wrt bug 211746

*clisp-2.43-r1 (14 Jan 2008)

  14 Jan 2008; Marijn Schouten <hkBst@gentoo.org> +clisp-2.43-r1.ebuild:
  fix for making clisp-link executable, bug 205387

  22 Dec 2007; nixnut <nixnut@gentoo.org> clisp-2.42-r1.ebuild:
  Added ~ppc wrt bug 196708

  08 Dec 2007; Samuli Suominen <drac@gentoo.org> clisp-2.43.ebuild:
  amd64 stable wrt #201216

  21 Nov 2007; Markus Rothe <corsair@gentoo.org> clisp-2.43.ebuild:
  Added ~ppc64; bug #199368

  18 Nov 2007; Marijn Schouten <hkBst@gentoo.org> clisp-2.43.ebuild:
  remove version fix

*clisp-2.43 (18 Nov 2007)

  18 Nov 2007; Marijn Schouten <hkBst@gentoo.org> +clisp-2.43.ebuild:
  bump

*clisp-2.42-r1 (22 Oct 2007)

  22 Oct 2007; Marijn Schouten <hkBst@gentoo.org> +clisp-2.42-r1.ebuild:
  fixes for clisp from bug 196543, thanks to Stelian Ionescu
  <stelian.ionescu-zeus@poste.it>

  17 Oct 2007; Marijn Schouten <hkBst@gentoo.org> clisp-2.42.ebuild:
  remove mangling of HyperSpec URL

*clisp-2.42 (17 Oct 2007)

  17 Oct 2007; Marijn Schouten <hkBst@gentoo.org> +clisp-2.42.ebuild:
  bump