@@ -1,6 +1,12 @@
 # ChangeLog for dev-lisp/clisp
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clisp/ChangeLog,v 1.77 2008/05/13 11:36:55 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clisp/ChangeLog,v 1.78 2008/05/17 16:04:29 aballier Exp $
+
+*clisp-2.44.1-r1 (17 May 2008)
+
+  17 May 2008; Alexis Ballier <aballier@gentoo.org> +clisp-2.44.1-r1.ebuild:
+  Dont strip module objects as stripping will also remove common symbols and
+  then we would expect failures when building modules against it
 
   13 May 2008; Marijn Schouten <hkBst@gentoo.org> -clisp-2.38.ebuild,
   -clisp-2.38-r1.ebuild, -clisp-2.38-r2.ebuild, -clisp-2.39.ebuild,
